getting started with layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-hello world
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="major-grid">
+      <div id="splash-grid">
+        <div id="header-grid">
+          <div id="header-left">
+            oots
+          </div>
+          <div id="header-right">
+            <a href="mailto:ootsapp@gmail.com">contact</a>
+          </div>
+        </div>
+        <div id="splash-content">
+          <div id="headline">Persistent, low-friction online meeting rooms</div>
+          <div id="download-button">Download</div>
+          <div id="main-image">main-image</div>
+        </div>
+      </div>
+
+      <div id="benefits-flex">
+        <div class="benefit">Instant Collaboration</div>
+        <div class="benefit">Idle-Friendly</div>
+        <div class="benefit">Open Door Policy</div>
+      </div>
+
+      <div id="cta-grid">Download</div>
+
+      <div id="footer-grid">
+        contact us copyright privacy policy terms of service
+      </div>
+    </div>
+  </body>
+</html>
