--- a/index.html
+++ b/index.html
@@ -6,17 +6,29 @@
     <div id="major-grid">
       <div id="splash-grid">
         <div id="header-grid">
-          <div id="header-left">
-            oots
-          </div>
+          <div id="header-left">oots</div>
           <div id="header-right">
             <a href="mailto:ootsapp@gmail.com">contact</a>
           </div>
         </div>
         <div id="splash-content">
-          <div id="headline">Persistent, low-friction online meeting rooms</div>
-          <div id="download-button">Download</div>
-          <div id="main-image">main-image</div>
+          <div id="splash-left">
+            <div id="title">oots</div>
+            <div id="headline">persistent, low-friction meeting rooms</div>
+            <div id="download">
+              <button id="download-button">Download</button>
+            </div>
+            <div id="intro-copy">
+              give your team a casual space to talk between all the meetings. a
+              space where passing comments evolve into impromptu brainstorming
+              sessions. a space for all the times you didn’t hit send on
+              embarrassing questions. a space to be a human, no invitation
+              necessary
+            </div>
+          </div>
+          <div id="splash-right">
+            <div id="main-image"><img src="mock.png" /></div>
+          </div>
         </div>
       </div>
 
