--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
   </head>
   <body>
-    <div id="major-grid">
+    <div id="container">
       <div id="splash-grid">
         <div id="header-grid">
           <div id="header-left">oots</div>
@@ -19,11 +20,11 @@
               <button id="download-button">Download</button>
             </div>
             <div id="intro-copy">
-              give your team a casual space to talk between all the meetings. a
-              space where passing comments evolve into impromptu brainstorming
-              sessions. a space for all the times you didn’t hit send on
-              embarrassing questions. a space to be a human, no invitation
-              necessary
+              your team's casual space to talk between all the meetings. a space
+              where passing comments can evolve into impromptu brainstorming
+              sessions. a space for all the small questions not worth DMing that
+              coworker who is probably busy. a space to be a human, no meeting
+              invite necessary
             </div>
           </div>
           <div id="splash-right">
