new font, improved spacing

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <title>oots | team chat rooms</title>
   </head>
   <body>
     <div id="container">
@@ -23,9 +24,10 @@
               your team's casual space to talk between all the meetings. a space
               where passing comments can evolve into impromptu brainstorming
               sessions. a space for all the small questions not worth DMing that
-              coworker who is probably busy. a space to be a human, no meeting
+              coworker who is probably busy. a space to be human, no meeting
               invite necessary
             </div>
+            <!-- its ok to be silent in this chatroom, to lurk/idle -->
           </div>
           <div id="splash-right">
             <div id="main-image"><img src="mock.png" /></div>
