--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <div id="container">
       <div id="splash-grid">
         <div id="header-grid">
-          <div id="header-left">oots</div>
+          <!-- <div id="header-left">oots</div> -->
           <div id="header-right">
-            <a href="mailto:ootsapp@gmail.com">contact</a>
+            <a href="mailto:ootsapp@gmail.com">email us</a>
           </div>
         </div>
         <div id="splash-content">
@@ -18,7 +18,7 @@
             <div id="title">oots</div>
             <div id="headline">persistent, low-friction meeting rooms</div>
             <div id="download">
-              <button id="download-button">Download</button>
+              <button class="download-button">&nbsp;Download&nbsp;</button>
             </div>
             <div id="intro-copy">
               your team's casual space to talk between all the meetings. a space
@@ -36,16 +36,38 @@
       </div>
 
       <div id="benefits-flex">
-        <div class="benefit">Instant Collaboration</div>
-        <div class="benefit">Idle-Friendly</div>
-        <div class="benefit">Open Door Policy</div>
+        <div class="benefit">
+          <div class="benefit-icon">q</div>
+          <div class="benefit-title">Instant Collaboration</div>
+          <div class="benefit-summary">
+            a persistent channel lets you join the ongoing conversation without
+            scheduling overhead
+          </div>
+        </div>
+        <div class="benefit">
+          <div class="benefit-icon">h</div>
+          <div class="benefit-title">Idle-Friendly</div>
+          <div class="benefit-summary">
+            idle comfortably! pause your music and unmute when you have
+            something to say
+          </div>
+        </div>
+        <div class="benefit">
+          <div class="benefit-icon">A</div>
+          <div class="benefit-title">Open Door Policy</div>
+          <div class="benefit-summary">
+            transparent availability means you can be approachable on your own
+            time
+          </div>
+        </div>
       </div>
-
-      <div id="cta-grid">Download</div>
-
       <div id="footer-grid">
-        contact us copyright privacy policy terms of service
+        <!-- contact us copyright privacy policy terms of service -->
       </div>
     </div>
   </body>
+
+  <!-- <div class="benefit-icon">
+    aAbBcCdDeEfF gGhHiIjJkKlL mMnNoOpPqQrR sStTuUvVwWxXyYzZ
+  </div> -->
 </html>
