--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="title">oots</div>
             <div id="headline">persistent, low-friction meeting rooms</div>
             <div id="download">
-              <button class="download-button">&nbsp;Download&nbsp;</button>
+              <button class="download-button">Download</button>
             </div>
             <div id="intro-copy">
               your team's casual space to talk between all the meetings. a space
@@ -34,40 +34,9 @@
           </div>
         </div>
       </div>
-
-      <div id="benefits-flex">
-        <div class="benefit">
-          <div class="benefit-icon">q</div>
-          <div class="benefit-title">Instant Collaboration</div>
-          <div class="benefit-summary">
-            a persistent channel lets you join the ongoing conversation without
-            scheduling overhead
-          </div>
-        </div>
-        <div class="benefit">
-          <div class="benefit-icon">h</div>
-          <div class="benefit-title">Idle-Friendly</div>
-          <div class="benefit-summary">
-            idle comfortably! pause your music and unmute when you have
-            something to say
-          </div>
-        </div>
-        <div class="benefit">
-          <div class="benefit-icon">A</div>
-          <div class="benefit-title">Open Door Policy</div>
-          <div class="benefit-summary">
-            transparent availability means you can be approachable on your own
-            time
-          </div>
-        </div>
-      </div>
       <div id="footer-grid">
         <!-- contact us copyright privacy policy terms of service -->
       </div>
     </div>
   </body>
-
-  <!-- <div class="benefit-icon">
-    aAbBcCdDeEfF gGhHiIjJkKlL mMnNoOpPqQrR sStTuUvVwWxXyYzZ
-  </div> -->
 </html>
