update email, add substack signup

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <div id="container">
       <div id="splash-grid">
         <div id="header-grid">
-          <!-- <div id="header-left">oots</div> -->
           <div id="header-right">
-            <a href="mailto:ootsapp@gmail.com">email us</a>
+            <a href="mailto:hello@oots.io">email us</a>
           </div>
         </div>
         <div id="splash-content">
@@ -18,7 +17,7 @@
             <div id="title">oots</div>
             <div id="headline">persistent, low-friction meeting rooms</div>
             <div id="download">
-              <button class="download-button">Download</button>
+              <!-- <button class="download-button">Download</button> -->
             </div>
             <div id="intro-copy">
               your team's casual space to talk between all the meetings. a space
@@ -27,16 +26,20 @@
               coworker who is probably busy. a space to be human, no meeting
               invite necessary
             </div>
-            <!-- its ok to be silent in this chatroom, to lurk/idle -->
+            <iframe
+              src="https://oots.substack.com/embed"
+              width="480"
+              height="150"
+              frameborder="0"
+              scrolling="no"
+            ></iframe>
           </div>
           <div id="splash-right">
             <div id="main-image"><img src="mock.png" /></div>
           </div>
         </div>
       </div>
-      <div id="footer-grid">
-        <!-- contact us copyright privacy policy terms of service -->
-      </div>
+      <div id="footer-grid"></div>
     </div>
   </body>
 </html>
