--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <iframe
               src="https://oots.substack.com/embed"
-              width="480"
+              max-width="480"
               height="150"
               frameborder="0"
               scrolling="no"
