favicon and images folderr

--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <html>
   <head>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="images/site.webmanifest" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>oots | team chat rooms</title>
   </head>
@@ -35,7 +53,7 @@
             ></iframe>
           </div>
           <div id="splash-right">
-            <div id="main-image"><img src="mock.png" /></div>
+            <div id="main-image"><img src="images/mock.png" /></div>
           </div>
         </div>
       </div>
