replace email signup with mailchimp

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <div id="splash-left">
             <div id="title">oots</div>
             <div id="headline">persistent, low-friction meeting rooms</div>
-            <div id="download">
-              <!-- <button class="download-button">Download</button> -->
-            </div>
+            <!--  <div id="download">
+<button class="download-button">Download</button> 
+            </div>-->
             <div id="intro-copy">
               your team's casual space to talk between all the meetings. a space
               where passing comments can evolve into impromptu brainstorming
@@ -44,13 +44,35 @@
               coworker who is probably busy. a space to be human, no meeting
               invite necessary
             </div>
-            <iframe
-              src="https://oots.substack.com/embed"
-              max-width="480"
-              height="150"
-              frameborder="0"
-              scrolling="no"
-            ></iframe>
+            <form
+              action="https://oots.us2.list-manage.com/subscribe/post?u=d73448dea8e789df826e0d00e&amp;id=c623ec30fd"
+              method="post"
+              id="mailchimp-form"
+              target="_blank"
+            >
+              <div id="form-parts">
+                <input
+                  type="email"
+                  name="EMAIL"
+                  id="email-input"
+                  placeholder="Email"
+                />
+
+                <div
+                  style="position: absolute; left: -5000px"
+                  aria-hidden="true"
+                >
+                  <input
+                    type="text"
+                    name="b_d73448dea8e789df826e0d00e_c623ec30fd"
+                    tabindex="-1"
+                  />
+                </div>
+                <button type="submit" name="subscribe" id="subscrube-button">
+                  Get Started
+                </button>
+              </div>
+            </form>
           </div>
           <div id="splash-right">
             <div id="main-image"><img src="images/mock.png" /></div>
