--- a/index.html
+++ b/index.html
@@ -25,18 +25,15 @@
   <body>
     <div id="container">
       <div id="splash-grid">
-        <div id="header-grid">
-          <div id="header-right">
-            <a href="mailto:hello@oots.io">email us</a>
-          </div>
+        <div id="header">
+          <a href="mailto:hello@oots.io">email us</a>
+          <a href="https://medium.com/@ootsapp">blog</a>
         </div>
         <div id="splash-content">
           <div id="splash-left">
             <div id="title">oots</div>
             <div id="headline">persistent, low-friction meeting rooms</div>
-            <!--  <div id="download">
-<button class="download-button">Download</button> 
-            </div>-->
+
             <div id="intro-copy">
               your team's casual space to talk between all the meetings. a space
               where passing comments can evolve into impromptu brainstorming
