--- a/index.html
+++ b/index.html
@@ -21,6 +21,20 @@
     <link rel="manifest" href="images/site.webmanifest" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>oots | team chat rooms</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-179520560-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-179520560-1");
+    </script>
   </head>
   <body>
     <div id="container">
